--- a/index.html
+++ b/index.html
@@ -1,1 +1,88 @@
-<h1>Hello Neurons!</h1>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Cognitive Solutions LLC</title>
+  <style>
+    body {
+      font-family: Arial, sans-serif;
+      margin: 0;
+      padding: 0;
+      background-color: #f9f9f9;
+    }
+
+    header {
+      background-color: rgb(53, 127, 175);
+      color: #fff;
+      padding: 20px;
+      text-align: center;
+    }
+
+    h1 {
+      font-size: 36px;
+      margin: 0;
+    }
+
+    main {
+      padding: 20px;
+    }
+
+    p {
+      line-height: 1.5;
+    }
+
+    .cta-button {
+      display: inline-block;
+      background-color: rgb(43, 57, 144);
+      color: #fff;
+      padding: 10px 20px;
+      border-radius: 4px;
+      text-decoration: none;
+      font-weight: bold;
+      margin-top: 20px;
+    }
+
+    .contributions-section {
+      margin-top: 40px;
+    }
+
+    .contributions-section h3 {
+      margin-bottom: 10px;
+    }
+
+    .contributions-section p {
+      margin-bottom: 0;
+    }
+
+    footer {
+      background-color: #000;
+      color: #fff;
+      padding: 10px;
+      text-align: center;
+    }
+  </style>
+</head>
+<body>
+  <header>
+    <h1>Cognitive Solutions LLC</h1>
+    <p>Providing Comprehensive Neuropsychological and Medical Services for Veterans</p>
+  </header>
+  
+  <main>
+    <h2>Welcome to Cognitive Solutions</h2>
+    <p>We're here to help you, veterans! Connect with our AI-powered system to get answers to your questions, find resources, and engage in meaningful conversations related to your mental health and well-being.</p>
+
+    <a class="cta-button" href="sms:INSERT PHONE NUMBER">Text Your Questions</a>
+
+    <div class="contributions-section">
+      <h3>Contribute and Help Fellow Veterans</h3>
+      <p>Share your experiences, insights, and resources with us. Your input will help us improve our AI system and provide better support to the veteran community. Together, we can make a difference!</p>
+    </div>
+  </main>
+
+  <footer>
+    <p>&copy; 2023 Cognitive Solutions LLC. All rights reserved.</p>
+  </footer>
+</body>
+</html>
